--- a/translations/kangyur/placeholders/088-032_toh538,1068-the_incantation_the_cloud_of_offerings.xml
+++ b/translations/kangyur/placeholders/088-032_toh538,1068-the_incantation_the_cloud_of_offerings.xml
@@ -4,14 +4,16 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">mchod sprin gyi gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">pūjameghadhāraṇī</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī, the Cloud of Offerings</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">mchod pa'i sprin zhes bya ba'i gzungs/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">pūjameghadhāraṇī</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">mchod sprin gyi gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">pūjameghanāmadhāraṇī</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">mchod pa'i sprin zhes bya ba'i gzungs/</title>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-61">Catherine Dalton</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2019</date>
+                <edition>v 0.0.3 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -40,9 +42,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-16T10:03:32.364Z" user="admin">16/12/2022 10:03:32</note>
-            
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T10:03:28.046Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T10:03:28.046Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2022-12-16T10:04:04.784Z" user="admin">16/12/2022 10:04:04</note>
+                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-12-16T10:03:28.046Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T10:03:28.046Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-12-16T10:03:59.088Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
