--- a/translations/kangyur/placeholders/088-034_toh539e,774,1074-the_incantation_of_the_polished_jewel.xml
+++ b/translations/kangyur/placeholders/088-034_toh539e,774,1074-the_incantation_of_the_polished_jewel.xml
@@ -6,19 +6,20 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">rin po che brdar ba'i gzungs/</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
-                <title type="mainTitle" xml:lang="en">The Incantation of the Polished Jewel</title>
+                <title type="mainTitle" xml:lang="en">The Dhāraṇī of the Polished Jewel</title>
                 <title type="otherTitle" xml:lang="en">[Note: the Tōhoku catalogue lists 7 short dhāraṇīs that it includes under the single Toh catalogue number, 539; this is the sixth.]</title>
-                <title type="otherTitle" xml:lang="en">The Incantation, Polished Jewels</title>
+                <title type="otherTitle" xml:lang="en">The Dhāraṇī, Polished Jewels</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">rin po che bdar ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="en">The Incantation, Polished Jewels</title>
+                <title type="otherTitle" xml:lang="en">The Dhāraṇī, Polished Jewels</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2019</date>
+                <edition>v 0.0.2 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-088-034"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh539e" type="text">
@@ -50,9 +51,9 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2019-12-20T12:59:02.349Z" user="admin">20/12/2019 12:59:02</note>
+                <note type="lastUpdated" date-time="2022-12-16T10:04:48.818Z" user="admin">16/12/2022 10:04:48</note>
             
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T10:04:44.488Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T10:04:44.488Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
