--- a/translations/kangyur/placeholders/100-021_toh539f,866-the_incantation_of_padmanetra.xml
+++ b/translations/kangyur/placeholders/100-021_toh539f,866-the_incantation_of_padmanetra.xml
@@ -6,18 +6,19 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">pad+ma'i spyan gyi gzungs/</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
-                <title type="mainTitle" xml:lang="en">The Incantation of Padmanetra</title>
+                <title type="mainTitle" xml:lang="en">The Dhāraṇī of Padmanetra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa pad+ma'i spyan zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="en">[Note: the Tōhoku catalogue lists 7 short dhāraṇīs that it includes under the single Toh catalogue number, 539; this is the seventh.]
                 </title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2019</date>
+                <edition>v 0.0.2 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-100-021"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh539f" type="text">
@@ -40,9 +41,9 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2019-12-20T13:10:32.993Z" user="admin">20/12/2019 13:10:32</note>
+                <note type="lastUpdated" date-time="2022-12-16T10:06:06.48Z" user="admin">16/12/2022 10:06:06</note>
             
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T10:06:02.117Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T10:06:02.117Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
