--- a/translations/kangyur/placeholders/101-126_toh539a,1070-the_incantation_of_praise.xml
+++ b/translations/kangyur/placeholders/101-126_toh539a,1070-the_incantation_of_praise.xml
@@ -6,16 +6,17 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">bstod pa/ (bstod pa'i gzungs/)</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
-                <title type="mainTitle" xml:lang="en">[The Incantation for] Praise</title>
+                <title type="mainTitle" xml:lang="en">[The Dhāraṇī for] Praise</title>
                 <title type="otherTitle" xml:lang="en">[Note: the Tōhoku catalogue lists 7 short dhāraṇīs that it includes under the single Toh catalogue number, 539; this is the second.]</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2019</date>
+                <edition>v 0.0.2 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-101-126"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh539a" type="text">
@@ -38,9 +39,9 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2019-12-20T13:05:07.989Z" user="admin">20/12/2019 13:05:07</note>
+                <note type="lastUpdated" date-time="2022-12-16T10:10:12.935Z" user="admin">16/12/2022 10:10:12</note>
             
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T10:10:08.607Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T10:10:08.607Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
