--- a/translations/kangyur/placeholders/101-127_toh539b,1071-the_incantation_for_blessing_the_offerings.xml
+++ b/translations/kangyur/placeholders/101-127_toh539b,1071-the_incantation_for_blessing_the_offerings.xml
@@ -6,16 +6,17 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">mchod pa byin gyis brlab pa/ (mchod pa byin gyis brlab pa'i gzungs/)</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
-                <title type="mainTitle" xml:lang="en">[The Incantation for] Blessing the Offerings</title>
+                <title type="mainTitle" xml:lang="en">[The Dhāraṇī for] Blessing the Offerings</title>
                 <title type="otherTitle" xml:lang="en">[Note: the Tōhoku catalogue lists 7 short dhāraṇīs that it includes under the single Toh catalogue number, 539; this is the third.]</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2019</date>
+                <edition>v 0.0.2 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-101-127"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh539b" type="text">
@@ -38,8 +39,8 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2019-12-20T12:58:51.873Z" user="admin">20/12/2019 12:58:51</note>
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="lastUpdated" date-time="2022-12-16T10:11:25.502Z" user="admin">16/12/2022 10:11:25</note>
+<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T10:11:21.18Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T10:11:21.18Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
