--- a/translations/kangyur/placeholders/101-129_toh539d,1073-the_incantation_with_which_offerings_service%20and_homage_are_made.xml
+++ b/translations/kangyur/placeholders/101-129_toh539d,1073-the_incantation_with_which_offerings_service%20and_homage_are_made.xml
@@ -4,13 +4,15 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa rnams la mchod pa dang nye gnas dang zhabs la spyi bos phyag byas par 'gyur/ (°'gyur ba'i gzungs/)</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="mainTitle" xml:lang="en">[The Dhāraṇī with which] Offerings to the Tathāgatas Are Made, Service, and Homage Rendered at Their Feet with the Crown of One’s Head</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa rnams la mchod pa dang nye gnas dang zhabs la spyi bos phyag byas par 'gyur/ (°'gyur ba'i gzungs/)</title>
                 <title type="otherTitle" xml:lang="en">[Note: the Tōhoku catalogue lists 7 short dhāraṇīs that it includes under the single Toh catalogue number, 539; this is the fifth.]</title>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-382">Dylan Esler</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2019</date>
+                <edition>v 0.0.3 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -39,8 +41,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-16T10:13:57.886Z" user="admin">16/12/2022 10:13:57</note>
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T10:13:53.567Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T10:13:53.567Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2022-12-16T10:14:26.672Z" user="admin">16/12/2022 10:14:26</note>
+                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-12-16T10:13:53.567Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T10:13:53.567Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-12-16T10:14:20.963Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
