--- a/translations/kangyur/placeholders/090-023_toh579,935-the_incantation_the_essence_of_the_six_perfections.xml
+++ b/translations/kangyur/placeholders/090-023_toh579,935-the_incantation_the_essence_of_the_six_perfections.xml
@@ -6,23 +6,27 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">phar phyin drug gi gzungs/</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
-                <title type="mainTitle" xml:lang="en">The Incantation, The Essence of the Six Perfections</title>
+                <title type="mainTitle" xml:lang="en">The Dhāraṇī, The Essence of the Six Perfections</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">pha rol tu phyin pa drug gi snying po'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">phar phyin drug gi snying po'i gzungs/</title>
-                <title type="otherTitle" xml:lang="en">The Incantation, the Essence of the Six Perfections</title>
+                <title type="otherTitle" xml:lang="en">The Dhāraṇī, the Essence of the Six Perfections</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">pha rol tu phyin pa drug gi snying po'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn"/>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-090-023"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh579" type="text">
                     <ref>Toh 579</ref>
                     <biblScope>vol.90, ff.203r-203v(pp.403-404)</biblScope>
-                    <location count-pages="2">
-                        <start volume="90" page="405"/>
-                        <end volume="90" page="406"/>
+                    <location work="UT4CZ5369" count-pages="2">
+                        <volume number="90" start-page="403" end-page="404"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12312" work="W22084"/>
@@ -30,16 +34,15 @@
                 <bibl key="toh935" type="text">
                     <ref>Toh 935</ref>
                     <biblScope>vol.100, ff..281r-281r(pp.561-561)</biblScope>
-                    <location count-pages="1">
-                        <start volume="100" page="563"/>
-                        <end volume="100" page="563"/>
+                    <location work="UT4CZ5369" count-pages="1">
+                        <volume number="100" start-page="561" end-page="561"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12697" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:06:18 by admin</note>
+                <note type="lastUpdated" date-time="2022-12-16T10:15:28.13Z" user="admin">16/12/2022 10:15:28</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T10:15:23.755Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T10:15:23.755Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
