--- a/translations/kangyur/placeholders/090-023_toh579,935-the_incantation_the_essence_of_the_six_perfections.xml
+++ b/translations/kangyur/placeholders/090-023_toh579,935-the_incantation_the_essence_of_the_six_perfections.xml
@@ -4,17 +4,17 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">phar phyin drug gi gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī, The Essence of the Six Perfections</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">pha rol tu phyin pa drug gi snying po'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">phar phyin drug gi snying po'i gzungs/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">phar phyin drug gi gzungs/</title>
                 <title type="otherTitle" xml:lang="en">The Dhāraṇī, the Essence of the Six Perfections</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">phar phyin drug gi snying po'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">pha rol tu phyin pa drug gi snying po'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn"/>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-7">Paul Hackett</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -42,7 +42,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-16T10:15:28.13Z" user="admin">16/12/2022 10:15:28</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T10:15:23.755Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T10:15:23.755Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2022-12-16T10:17:23.737Z" user="admin">16/12/2022 10:17:23</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-12-16T10:15:23.755Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T10:15:23.755Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T10:17:18.115Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
