--- a/translations/kangyur/placeholders/090-024_toh580,936-the_incantation_that_captures_the_six_perfections.xml
+++ b/translations/kangyur/placeholders/090-024_toh580,936-the_incantation_that_captures_the_six_perfections.xml
@@ -6,22 +6,26 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">phyin drug bzung ba'i gzungs/</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
-                <title type="mainTitle" xml:lang="en">The Incantation that Captures the Six Perfections</title>
+                <title type="mainTitle" xml:lang="en">The Dhāraṇī that Captures the Six Perfections</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">pha rol tu phyin pa drug bzung bar 'gyur ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn"/>
                 <title type="otherTitle" xml:lang="Bo-Ltn">phar phyin drug gzung ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">pha rol tu phyin pa drug gzung bar 'gyur ba'i gzungs/</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-090-024"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh580" type="text">
                     <ref>Toh 580</ref>
                     <biblScope>vol.90, ff.203v-203v(pp.404-404)</biblScope>
-                    <location count-pages="1">
-                        <start volume="90" page="406"/>
-                        <end volume="90" page="406"/>
+                    <location work="UT4CZ5369" count-pages="1">
+                        <volume number="90" start-page="404" end-page="404"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12313" work="W22084"/>
@@ -29,16 +33,15 @@
                 <bibl key="toh936" type="text">
                     <ref>Toh 936</ref>
                     <biblScope>vol.100, ff.281r-281v(pp.561-562)</biblScope>
-                    <location count-pages="2">
-                        <start volume="100" page="563"/>
-                        <end volume="100" page="564"/>
+                    <location work="UT4CZ5369" count-pages="2">
+                        <volume number="100" start-page="561" end-page="562"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12698" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:06:19 by admin</note>
+                <note type="lastUpdated" date-time="2022-12-16T10:19:20.99Z" user="admin">16/12/2022 10:19:20</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T10:19:16.659Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T10:19:16.659Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
