--- a/translations/kangyur/placeholders/090-024_toh580,936-the_incantation_that_captures_the_six_perfections.xml
+++ b/translations/kangyur/placeholders/090-024_toh580,936-the_incantation_that_captures_the_six_perfections.xml
@@ -4,16 +4,17 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">phyin drug bzung ba'i gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī that Captures the Six Perfections</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">phyin drug bzung ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">pha rol tu phyin pa drug bzung bar 'gyur ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn"/>
-                <title type="otherTitle" xml:lang="Bo-Ltn">phar phyin drug gzung ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">pha rol tu phyin pa drug gzung bar 'gyur ba'i gzungs/</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">phar phyin drug gzung ba'i gzungs/</title>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-7">Paul Hackett</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -41,7 +42,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-16T10:19:20.99Z" user="admin">16/12/2022 10:19:20</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T10:19:16.659Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T10:19:16.659Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2022-12-16T10:20:04.346Z" user="admin">16/12/2022 10:20:04</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-12-16T10:19:16.659Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T10:19:16.659Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T10:19:58.643Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
