--- a/translations/kangyur/placeholders/090-025_toh581,937-the_incantation_that_gains_the_ten_perfections.xml
+++ b/translations/kangyur/placeholders/090-025_toh581,937-the_incantation_that_gains_the_ten_perfections.xml
@@ -6,20 +6,24 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">phar phyin bcu thob pa'i gzungs/</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
-                <title type="mainTitle" xml:lang="en">The Incantation that Gains the Ten Perfections</title>
+                <title type="mainTitle" xml:lang="en">The Dhāraṇī that Gains the Ten Perfections</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">pha rol tu phyin pa bcu thob par 'gyur ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">pha rol tu phyin pa bcu thob par 'gyur pa'i gzungs/</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-090-025"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh581" type="text">
                     <ref>Toh 581</ref>
                     <biblScope>vol.90, ff.203v-203v(pp.404-404)</biblScope>
-                    <location count-pages="1">
-                        <start volume="90" page="406"/>
-                        <end volume="90" page="406"/>
+                    <location work="UT4CZ5369" count-pages="1">
+                        <volume number="90" start-page="404" end-page="404"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12314" work="W22084"/>
@@ -27,16 +31,15 @@
                 <bibl key="toh937" type="text">
                     <ref>Toh 937</ref>
                     <biblScope>vol.100, ff.pp.281v-281v(562-562)</biblScope>
-                    <location count-pages="1">
-                        <start volume="100" page="564"/>
-                        <end volume="100" page="564"/>
+                    <location work="UT4CZ5369" count-pages="1">
+                        <volume number="100" start-page="562" end-page="562"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12699" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:06:20 by admin</note>
+                <note type="lastUpdated" date-time="2022-12-16T10:20:47.449Z" user="admin">16/12/2022 10:20:47</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T10:20:43.116Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T10:20:43.116Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
