--- a/translations/kangyur/placeholders/090-027_toh583,939-the_incantation_that_captures_the_perfection_of_wisdom_in_one_hundred_thousand_lines.xml
+++ b/translations/kangyur/placeholders/090-027_toh583,939-the_incantation_that_captures_the_perfection_of_wisdom_in_one_hundred_thousand_lines.xml
@@ -4,16 +4,18 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">sher phyin stong phrag brgya pa bzung ba'i gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī that Captures the Perfection of Wisdom in One Hundred Thousand Lines</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">shes rab kyi pha rol tu phyin pa stong phrag brgya pa bzung bar 'gyur ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">sher phyin stong phrag brgya pa gzung ba'i gzungs/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">sher phyin stong phrag brgya pa bzung ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="en">The Dhāraṇī that Captures the Perfection of Wisdom in a Hundred Thousand Lines</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">sher phyin stong phrag brgya pa gzung ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">shes rab kyi pha rol tu phyin pa stong phrag brgya pa gzung bar 'gyur ba'i gzungs/</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">shes rab kyi pha rol tu phyin pa stong phrag brgya pa bzung bar 'gyur ba'i gzungs/</title>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-7">Paul Hackett</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -41,7 +43,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-16T10:22:07.497Z" user="admin">16/12/2022 10:22:07</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T10:22:03.166Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T10:22:03.166Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2022-12-16T10:22:38.132Z" user="admin">16/12/2022 10:22:38</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-12-16T10:22:03.166Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T10:22:03.166Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T10:22:32.423Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
